--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+        <meta charset="UTF-8">
+
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>
             Nayeem's Diary
         </title>
@@ -32,7 +37,7 @@
                 </ul>
 
             </div>
-            <div class="content">
+            <div class="homepage">
                 <img src="assets/body.png" alt="welcome">
 
             </div>
