changed hovering over effect on the links on sidebar and removed ul.

--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,9 @@
         <!-- main part -->
         <div class="main">
             <div class="sidebar">
-                <ul>
-                    <li><a href="programming.html">Programming</a></li>
-                    <li><a href="thoughts.html">Thoughts</a></li>
-                    <li><a href="others.html">Others</a></li>
-                </ul>
-
+                <a href="programming.html">Programming</a>
+                <a href="thoughts.html">Thoughts</a>
+                <a href="others.html">Others</a>
             </div>
             <div class="contact">
                 <p>
