--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="index.html"> <img src="assets/logo.png" alt="logo"></a>
             </div>
             <div class="menu">
-                <ul>
+                                            <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -25,12 +25,9 @@
         <!-- main part -->
         <div class="main">
             <div class="sidebar">
-                <ul>
-                    <li><a href="programming.html">Programming</a></li>
-                    <li><a href="thoughts.html">Thoughts</a></li>
-                    <li><a href="others.html">Others</a></li>
-                </ul>
-
+                <a href="programming.html">Programming</a>
+                <a href="thoughts.html">Thoughts</a>
+                <a href="others.html">Others</a>
             </div>
             <div class="homepage">
                 <img src="assets/body.png" alt="welcome">
