--- a/web/contact.html
+++ b/web/contact.html
@@ -18,7 +18,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                
+
             </div>
         </div>
         <!-- main part -->
@@ -29,12 +29,24 @@
                 <a href="others.html">Others</a>
             </div>
             <div class="contact">
-                <p>
-                    E-mail: nayeem.cse.cou@gmail.com
-                </p>
-                <p>
-                    Phone: 01521726130
-                </p>
+                <form class="" action="index.html" method="post">
+                  <table>
+                    <tr>
+                      <td>Name:</td>
+                      <td><input type="text"/></td>
+                    </tr>
+                    <tr>
+                      <td>E-mail:</td>
+                      <td><input type="email"/></td>
+                    </tr>
+                    <tr>
+                      <td>Age:</td>
+                      <td><input type="number"/></td>
+                    </tr>
+
+                    </table
+
+                </form>
             </div>
 
         </div>
