Added first class home task to the repository and added php code.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 </head>
 <body>
+    <div class="first_class">
+        <a href="class1/index.html">First Class Homework</a>
+    </div>
     <div class="web">
         <p>
         <a href="web\index.html">Nayeem's Diary</a><br>
