--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <div class="first_class">
-        <a href="class1/index.html">First Class Homework</a>
+        <a href="class1/index.html">First  Class  Homework</a>
     </div>
     <div class="web">
         <p>
-        <a href="web\index.html">Nayeem's Diary</a><br>
+        <a href="web\index.html">Nayeem's  Diary</a><br>
        This is a static website build with html and css. Click to see.</p>
     </div>
     <div class="php_code">
-        <a href="php_code\">PHP Implementation</a>
+        <a href="php_code\index.php">PHP  Implementation</a>
     </div>
 </body>
 </html>
