update php_code folder link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        This is a static website build with html and css. Click to see.</p>
     </div>
     <div class="php_code">
-        <a href="php_code\index.php">PHP  Implementation</a>
+        <a href="https://github.com/Nayeem-CSE-CoU/php.github.io/tree/main/php_code">PHP  Implementation</a>
     </div>
 </body>
 </html>
