updated index and Nayeem's diary website.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link href="style.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Faster One' rel='stylesheet'>
+    
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+
 
 </head>
 <body>
     <div class="first_class">
-        <a href="class1/index.html">First  Class  Homework</a>
+        <a href="class1/index.html" target="_blank">First  Class  Homework</a>
     </div>
     <div class="web">
-        <p>
-        <a href="web\index.html">Nayeem's  Diary</a><br>
-       This is a static website build with html and css. Click to see.</p>
+        <a href="web\index.html" target="_blank">Nayeem's  Diary</a>
+        <br>
+        This is a static website build with html,css and bootsrap.
     </div>
     <div class="php_code">
-        <a href="https://github.com/Nayeem-CSE-CoU/php.github.io/tree/main/php_code">PHP  Implementation</a>
+        <a href="https://github.com/Nayeem-CSE-CoU/php.github.io/tree/main/php_code" target="_blank">PHP  Implementation</a>
     </div>
 </body>
 </html>
