--- a/web/index.html
+++ b/web/index.html
@@ -30,16 +30,49 @@
                 <a href="others.html">Others</a>
             </div>
             <div class="homepage">
-                <img src="assets/body.png" alt="welcome">
-
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+                <div class="gallery">
+                    <img src="assets/body.png" alt="welcome">
+                </div>
+               
             </div>
 
         </div>
         <!-- footer part -->
         <div class="footer">
-            <p>
                 Copyright &copy; 2021
-            </p>
 
         </div>
 
