--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 </head>
 <body>
     <div class="first_class">
-        <a href="class1/index.html" target="_blank">First  Class  Homework</a>
+        <a href="class1/index.html" target="_blank">Homework-1</a>
     </div>
     <div class="web">
         <a href="web\index.html" target="_blank">Nayeem's  Diary</a>
-        <br>
+        <p>
         This is a static website build with html,css and bootsrap.
+        <br>
+        Homework-2,3,4,5</p>
     </div>
     <div class="php_code">
         <a href="https://github.com/Nayeem-CSE-CoU/php.github.io/tree/main/php_code" target="_blank">PHP  Implementation</a>
