--- a/web/about.html
+++ b/web/about.html
@@ -4,7 +4,11 @@
         <title>
             Nayeem's Diary
         </title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="assets/style.css" rel="stylesheet">
+        <link href="assets/responsive.css" rel="stylesheet">
     </head>
     <body>
         <!-- header part -->
