--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,11 @@
         <title>
             Nayeem's Diary
         </title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="assets/style.css" rel="stylesheet">
+        <link href="assets/responsive.css" rel="stylesheet">
     </head>
     <body>
         <!-- header part -->
@@ -14,20 +18,20 @@
                 <a href="index.html"> <img src="assets/logo.png" alt="logo"></a>
             </div>
             <div class="menu">
-                                            <ul>
+                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                
             </div>
         </div>
         <!-- main part -->
         <div class="main">
             <div class="sidebar">
-                <a href="programming.html">Programming</a>
-                <a href="thoughts.html">Thoughts</a>
-                <a href="others.html">Others</a>
+                    <a href="programming.html">Programming</a>
+                    <a href="thoughts.html">Thoughts</a>
+                    <a href="others.html">Others</a>
+               
             </div>
             <div class="homepage">
                 <div class="gallery">
