--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="assets/style.css" rel="stylesheet">
         <link href="assets/responsive.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/972c99837c.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- header part -->
@@ -24,14 +25,31 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
+            <div class="select">
+                <select onchange="location = this.value;">
+                    <option value="" disabled selected>--Select--</option>
+                    <option value="index.html">Home</option>
+                    <option value="about.html">About</option>
+                    <option value="contact.html">Contact</option>
+                </select>
+            </div>
         </div>
         <!-- main part -->
         <div class="main">
             <div class="sidebar">
+                <div class="large">
                     <a href="programming.html">Programming</a>
                     <a href="thoughts.html">Thoughts</a>
                     <a href="others.html">Others</a>
-               
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn"><i class="fas fa-list"></i></button>
+                    <div class="dropdown-content">
+                        <li><a href="programming.html">Programming</a></li>
+                        <li><a href="thoughts.html">Thoughts</a></li>
+                        <li><a href="others.html">Others</a></li>
+                    </div>
+                </div>
             </div>
             <div class="homepage">
                 <div class="gallery">
